# Flan

./: .codedocs  .gitignore  Audio.cpp  Audio.h  AudioBuffer.cpp  AudioBuffer.h  CMakeLists.txt  CMakeSettings.json  Doxyfile.in  Main.cpp  PVOC.cpp  PVOC.h  PVOCBuffer.cpp  Procs.cpp  Procs.h  README.md  SpectralBuffer.cpp  SpectralBuffer.h  SpectralProcs.cpp  SpectralProcs.h  TODO.md  Types.h  WindowFunctions.cpp  WindowFunctions.h  flan.code-workspace
cmake/: FindFFTWF.cmake  FindSndFile.cmake  FlanConfig.cmake.in
cmake/Modules/: FindFFTW.cmake  FindMKL.cmake  FindSampleRate.cmake  FindSndFile.cmake
docs/: Doxyfile.in  flan.dox
docs/html/: _audio_8h_source.html  _audio_buffer_8h_source.html  _c_l_context_8h_source.html  _c_l_progs_8h_source.html  _d_s_p_utility_8h_source.html  _f_f_t_helper_8h_source.html  _function_8h_source.html  _graph_8h_source.html  _p_v_o_c_8h_source.html  _p_v_o_c_buffer_8h_source.html  _spectrum_8h_source.html  _spectrum_buffer_8h_source.html  _synthesis_8h_source.html  _wavetable_8h_source.html  _window_functions_8h_source.html  annotated.html  classes.html  classflan_1_1_audio-members.html  classflan_1_1_audio.html  classflan_1_1_audio_buffer-members.html  classflan_1_1_audio_buffer.html  classflan_1_1_graph-members.html  classflan_1_1_graph.html  classflan_1_1_p_v_o_c-members.html  classflan_1_1_p_v_o_c.html  classflan_1_1_p_v_o_c_buffer-members.html  classflan_1_1_p_v_o_c_buffer.html  classflan_1_1_wavetable-members.html  classflan_1_1_wavetable.html  classvv__iterator-members.html  classvv__iterator.html  defines_8h_source.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_699b9a7f2c337d6cf78c359b1833c41d.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  flanlicense.html  functions.html  functions_b.html  functions_c.html  (+76 more)
docs/html/search/: all_0.js  all_10.js  all_11.js  all_13.js  all_14.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  functions_0.js  functions_1.js  functions_10.js  functions_12.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_9.js  (+13 more)
include/flan/: Audio.h  AudioBuffer.h  CLContext.h  DSPUtility.h  FFTHelper.h  Function.h  Graph.h  PVOC.h  PVOCBuffer.h  Synthesis.h  Wavetable.h  defines.h
include/flan/Utility/: Bytes.h  Interpolator.h  Interval.h  Rect.h  vec2.h
include/r8brain/bench/: snrtest.cpp
libXCDP/: CMakeLists.txt
libXCDP/include/: Audio.h  AudioBuffer.h  CLContext.h  PVOC.h  PVOCBuffer.h  RealFunc.h  Spectrum.h  SpectrumBuffer.h  Synthesis.h  Types.h  Utility.h  WindowFunctions.h
libXCDP/include/WDL/: resample.h
libXCDP/include/bmp/: bitmap_image.hpp
libXCDP/include/r8brain/DLL/: r8bsrc.cpp
libXCDP/include/r8brain/bench/: r8bfreesrc.cpp  rmscompare.cpp  zerotest.cpp
libXCDP/include/xcdp/: Audio.h  AudioBuffer.h  CLContext.h  CLProgs.h  DSPUtility.h  FFTHelper.h  Function.h  Graph.h  PVOC.h  PVOCBuffer.h  Spectrum.h  SpectrumBuffer.h  Synthesis.h  Utility.h  Wavetable.h  WindowFunctions.h  defines.h  spline.h  vv_iterator.h
libXCDP/include/xcdp/Utility/: Bytes.h  Color.h  Interpolator.h  Interval.h  Rect.h  Timer.h  View.h  vec2.h
libXCDP/src/: Audio.cpp  AudioBuffer.cpp  CDPMapPVOC.cpp  CLContext.cpp  CLProgs.cpp  DSPUtility.cpp  FFTHelper.cpp  Function.cpp  Graph.cpp  PVOC.cpp  PVOCBuffer.cpp  RealFunc.cpp  Spectrum.cpp  SpectrumBuffer.cpp  Synthesis.cpp  Utility.cpp  Wavetable.cpp  WindowFunctions.cpp
libXCDP/src/Audio/: Audio.cpp  AudioBuffer.cpp  AudioConversions.cpp  AudioInformation.cpp  AudioTexture.cpp  YIN.cpp
libXCDP/src/PVOC/: PVOC.cpp  PVOCBuffer.cpp  PVOCConversions.cpp  PVOCInformation.cpp  PVOCModify.cpp
libXCDP/src/Utility/: Bytes.cpp  Color.cpp  Interpolator.cpp  Interval.cpp  Rect.cpp  View.cpp
libXCDP/src/WDL/: resample.cpp  resample.h
libflan/: CMakeLists.txt  README.md
libflan/include/WDL/: resample.h
libflan/include/flan/: Audio.h  AudioBuffer.h  CLContext.h  CLProgs.h  Graph.h  PVOC.h  PVOCBuffer.h  Spectrum.h  SpectrumBuffer.h
libflan/src/: CLContext.cpp  CLProgs.cpp  DSPUtility.cpp  Function.cpp  Spectrum.cpp  SpectrumBuffer.cpp  Wavetable.cpp  WindowFunctions.cpp
libflan/src/Audio/: Audio.cpp  AudioConversions.cpp  AudioInformation.cpp  AudioTexture.cpp
libflan/src/PVOC/: PVOC.cpp  PVOCConversions.cpp  PVOCInformation.cpp  PVOCModify.cpp
libflan/src/Utility/: Bytes.cpp  Interpolator.cpp  Rect.cpp  View.cpp
src/: CLContext.cpp  CLProgs.cpp  FFTHelper.cpp  Function.cpp  Graph.cpp  Synthesis.cpp  Wavetable.cpp
src/Audio/: Audio.cpp  AudioBuffer.cpp  AudioConversions.cpp  AudioSynthesis.cpp  YIN.cpp
src/PVOC/: PVOC.cpp  PVOCBuffer.cpp  PVOCConversions.cpp  PVOCInformation.cpp  PVOCModify.cpp
src/Utility/: Color.cpp  Interpolator.cpp  Interval.cpp
src/WDL/: denormal.h  heapbuf.h  resample.cpp
src/bmp/: bitmap_image.hpp
src/constantQ/src/: CQBase.h  CQInverse.cpp  CQInverse.h  CQKernel.cpp  CQKernel.h  CQParameters.h  ConstantQ.cpp  ConstantQ.h  Pitch.cpp
src/flan/: Buffer.h  DSPUtility.cpp  DSPUtility.h  FFTHelper.cpp  FFTHelper.h  Function.cpp  Function.h  FunctionSample.h  Graph.cpp  Graph.h  Pipe.h  STFTInterface.h  Synthesis.h  Wavetable.cpp  Wavetable.h  WindowFunctions.cpp  WindowFunctions.h  defines.cpp  defines.h  phase_vocoder.cpp  phase_vocoder.h
src/flan/Audio/: Audio.cpp  Audio.h  AudioBuffer.cpp  AudioBuffer.h  AudioChannels.cpp  AudioCombination.cpp  AudioConstructors.cpp  AudioConversions.cpp  AudioFilter.cpp  AudioInformation.cpp  AudioMod.cpp  AudioMod.h  AudioSpatial.cpp  AudioSynthesis.cpp  AudioTemporal.cpp  AudioTexture.cpp  AudioVolume.cpp  YIN.cpp
src/iir1/: Biquad.cpp  Butterworth.cpp  Cascade.cpp  ChebyshevI.cpp  ChebyshevII.cpp  Custom.cpp  Iir.h  MathSupplement.h  PoleFilter.cpp  RBJ.cpp  RBJ.h
src/r8brain/: CDSPSincFilterGen.h
tests/: CMakeLists.txt  XCDPTest.cpp  flanTest.cpp
(+68 files in other folders)
